Endret til distroless for resten av appene